fixed alignments

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -53,7 +53,7 @@ h1 {
 
 .content-div {
   animation: fadeIn 0.5s ease-in;
-  margin: 0px 8px;
+  margin: 8px;
   padding: 10px;
   display: flex;
   align-items: center;
